Update azure-pipelines-6.yml for Azure Pipelines

--- a/azure-pipelines-6.yml
+++ b/azure-pipelines-6.yml
@@ -7,7 +7,8 @@ trigger:
 - main
 
 pool:
-  name: 'Agent1'
+  name: Agent1
+  demands: msbuild, visualstudio, vstest, Agent.Version -gtVersion 2.163.1
   vmImage: 'windows-latest'
 
 variables:
