Update azure-pipelines-6.yml for Azure Pipelines

--- a/azure-pipelines-6.yml
+++ b/azure-pipelines-6.yml
@@ -8,7 +8,7 @@ trigger:
 
 pool:
   name: Agent1
-  demands: msbuild, visualstudio, vstest, Agent.Version -gtVersion 2.163.1
+  demands: 'msbuild, visualstudio, vstest, Agent.Version -gtVersion 2.163.1'
   vmImage: 'windows-latest'
 
 variables:
