Update azure-pipelines-6.yml for Azure Pipelines

--- a/azure-pipelines-6.yml
+++ b/azure-pipelines-6.yml
@@ -7,23 +7,14 @@
 trigger:
 - main
 
-pool:
-  vmImage: 'windows-latest'
+pool: 
+  name: Agent1
   demands:
-  - task: MSBuild@1
+- task: MSBuild@1
   inputs:
     solution: '**/*.sln'
-  - task: VSTest@2
-  inputs:
-    testSelector: 'testAssemblies'
-    testAssemblyVer2: |
-      **\*test*.dll
-      !**\*TestAdapter.dll
-      !**\obj\**
-    searchFolder: '$(System.DefaultWorkingDirectory)'
-  - task: VSBuild@1
-  inputs:
-    solution: '**\*.sln'
+  vmImage: 'windows-latest'
+
 
 variables:
   solution: '**/*.sln'
