--- a/azure-pipelines-5.yml
+++ b/azure-pipelines-5.yml
@@ -7,6 +7,13 @@ trigger:
 - main
 
 pool:
+  name: Agent1
+  demands:
+  - task: 'MSBuild@1'
+    inputs:
+      solution: '**/*.sln'
+      msbuildArchitecture: 'x64'
+   
   vmImage: 'windows-latest'
 
 variables:
