Update azure-pipelines-12.yml for Azure Pipelines

--- a/azure-pipelines-12.yml
+++ b/azure-pipelines-12.yml
@@ -7,6 +7,9 @@ pool: MyPool
   - npm
 
 variables:
+- task: DotNetCoreCLI@2
+  inputs:
+    command: 'build'
   buildConfiguration: 'Release'
 
 steps:
